praticando css: brincando com o style e ainda tentando aprender responsividade

--- a/index.html
+++ b/index.html
@@ -321,12 +321,10 @@
             <img src="img/logo-white.png" alt="">
 
             <div class="navegacao__redes-sociais">
-                <a href="https://www.facebook.com/ReprogramaBr/" target="_blank">
+                <a href="https://www.facebook.com/mareduds/" target="_blank">
                     <img src="./img/icon-facebook.png" alt="Íconde do Facebook">
                 </a>
-                <a href="https://twitter.com/ReprogramaBr" target="_blank">
-                    <img src="./img/icon-twitter.png" alt="Ícone do Twitter">
-                </a>
+                
                 <a href="https://www.instagram.com/reprogramabr/" target="_blank">
                     <img src="./img/icon-instagram.png" alt="Ícone do Instagram">
                 </a>
@@ -336,7 +334,7 @@
             </div>
         </div>
         <div class="footer_cc">
-            <p>Creative Commons 2021 | Feito com amor por Reprograma</p>
+            <p>Creative Commons 2021 | Feito por Maria Eduarda Souza.</p>
         </div>
     </footer>
 
